--- a/TP1/package.json
+++ b/TP1/package.json
@@ -12,7 +12,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "d3": "^5.16.0",
-    "parcel-bundler": "^1.12.4"
+    "d3-random": "^3.0.1",
+    "parcel-bundler": "^1.3.1"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
