Remove TP5 references

--- a/Projet/package.json
+++ b/Projet/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "tp5",
-  "version": "1.0.0",
-  "description": "TP pour le cours INF8808.",
+  "name": "final_project",
+  "version": "0.1",
   "main": "src/index.js",
   "scripts": {
     "build": "parcel build ./src/index.html",
     "start": "parcel ./src/index.html --log-level=2 --port=8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Olivia Gélinas",
-  "license": "UNLICENSED",
   "dependencies": {
     "d3": "^5.16.0",
     "d3-geo": "^1.12.1",
