--- a/Projet/package.json
+++ b/Projet/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "parcel build ./src/index.html",
     "start": "parcel ./src/index.html --log-level=2 --port=8080",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no tests\"",
+    "format": "prettier --write ./src",
+    "lint": "eslint --fix --ext .js src/ && prettier --loglevel silent --write ./src"
   },
   "dependencies": {
     "d3": "^5.16.0",
@@ -24,7 +26,8 @@
     "eslint-plugin-jsdoc": "^29.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^2.7.1"
   },
   "staticFiles": {
     "staticPath": [
