--- a/Projet/package.json
+++ b/Projet/package.json
@@ -1,10 +1,13 @@
 {
   "name": "final_project",
   "version": "0.1",
-  "main": "src/index.js",
+  "source": "src/index.html",
+  "homepage": "https://guillaume-jones.github.io/INF8808/",
   "scripts": {
-    "build": "parcel build ./src/index.html",
-    "start": "parcel ./src/index.html --log-level=2 --port=8080",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist -t true",
+    "build": "parcel build --public-url ./ ./src/index.html",
+    "start": "parcel ./src/index.html --log-level=none --port=8080",
     "test": "echo \"Error: no tests\"",
     "format": "prettier --write ./src",
     "lint": "eslint --fix --ext .js src/ && prettier --loglevel silent --write ./src"
@@ -13,8 +16,7 @@
     "d3": "^5.16.0",
     "d3-geo": "^1.12.1",
     "d3-svg-legend": "^2.25.6",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.4.3",
+    "parcel": "^2.6.2",
     "point-in-polygon": "^1.1.0",
     "regenerator-runtime": "^0.13.9",
     "scripts": "^0.1.0"
@@ -27,11 +29,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "gh-pages": "^4.0.0",
+    "parcel-reporter-static-files-copy": "^1.3.4",
     "prettier": "^2.7.1"
   },
   "staticFiles": {
-    "staticPath": [
-      "./src/assets/data"
-    ]
+    "staticPath": "./src/assets/data"
   }
 }
