--- a/Projet/package.json
+++ b/Projet/package.json
@@ -16,6 +16,7 @@
     "d3": "^5.16.0",
     "d3-geo": "^1.12.1",
     "d3-svg-legend": "^2.25.6",
+    "d3-time-format": "^4.1.0",
     "parcel": "^2.6.2",
     "point-in-polygon": "^1.1.0",
     "regenerator-runtime": "^0.13.9",
